--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<iframe id="player" class="player" src="https://taraftarium24.dev/channel.html?id=yayinex2#amp=1" style="overflow: hidden;" scrolling="no" width="100%" height="450" frameborder="0" allowfullscreen=""></iframe>
+<iframe 
+    id="player" 
+    class="player" 
+    src="https://taraftarium24.dev/channel.html?id=yayinex2#amp=1" 
+    style="overflow: hidden;" 
+    scrolling="no" 
+    width="100%" 
+    height="450" 
+    frameborder="0" 
+    allowfullscreen=""
+    referrerpolicy="no-referrer-when-downgrade">
+</iframe>
 
 #akisbaslangic
 <a href="/yayinss">
