--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <iframe 
     id="player" 
     class="player" 
-    src="https://taraftarium24.dev/channel.html?id=yayinex2#amp=1" 
+    src="https://taraftarium24.dev/channel.html?id=yayinex2" 
     style="overflow: hidden;" 
     scrolling="no" 
     width="100%" 
