--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-<iframe 
-    id="player" 
-    class="player" 
-    src="https://taraftarium24.dev/channel.html?id=yayinex2" 
-    style="overflow: hidden;" 
-    scrolling="no" 
-    width="100%" 
-    height="450" 
-    frameborder="0" 
-    allowfullscreen=""
-    referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+<iframe id="player" class="player" src="/channel.html?id=yayinstar" style="overflow: hidden;" scrolling="no" width="100%" height="450" frameborder="0" allowfullscreen=""></iframe>
+
 
 #akisbaslangic
 <a href="/yayinss">
