--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+
+<a href="https://sites.google.com/view/iptvold" target="_blank" rel="noopener">
+
+<img decoding="async" src="https://sp-ao.shortpixel.ai/client/to_webp,q_lossy,ret_img/https://taraftarium24.dev/iptvold.jpg" width="100%" alt="iptvold"></a>
+
 <iframe id="player" class="player" src="/channel.html?id=yayinstar" style="overflow: hidden;" scrolling="no" width="100%" height="450" frameborder="0" allowfullscreen=""></iframe>
 
 
