--- a/index.html
+++ b/index.html
@@ -10,287 +10,287 @@
 <a href="/yayinex1">
             <div class="sportrgool">
                 <i class="sportrgooltime">17:00</i> Samsunspor - Almere City
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex2">
             <div class="sportrgool">
                 <i class="sportrgooltime">20:00</i> Nizhny Nov. - Rubin Kazan
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex3">
             <div class="sportrgool">
                 <i class="sportrgooltime">20:00</i> Lyngby - Kopenhag
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex4">
             <div class="sportrgool">
                 <i class="sportrgooltime">20:30</i> Kosice - Roma
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayintrtspor">
             <div class="sportrgool">
                 <i class="sportrgooltime">21:00</i> Türkiye U19 - Danimarka U19
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex5">
             <div class="sportrgool">
                 <i class="sportrgooltime">21:00</i> İspanya U19 - Fransa U19
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex6">
             <div class="sportrgool">
                 <i class="sportrgooltime">21:00</i> ABD Basket - Almanya Basket
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinex7">
             <div class="sportrgool">
                 <i class="sportrgooltime">21:00</i> Sırbistan Basket - Yunanistan Basket
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 		
 <a href="/yayinnbatv">
             <div class="sportrgool">
                 <i class="sportrgooltime">03:00</i> Miami Heat - Memphis
-
+                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 			
 <a href="/yayinstar">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinb2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinb3">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports 3
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinb4">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports 4
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinb5">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports 5
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinbm1">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports Max 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinbm2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> beIN Sports Max 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinss">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> S Sport
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinss2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> S Sport 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayint1">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tivibu Spor 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayint2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tivibu Spor 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayint3">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tivibu Spor 3
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayint4">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tivibu Spor 4
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinsmarts">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Smart Spor
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinsms2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Smart Spor 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayintrtspor">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Trt Spor
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayintrtspor2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Trt Spor 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayintrt1">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Trt 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinas">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> A Spor
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinatv">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Atv
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayintv8">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tv 8
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayintv85">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Tv8.5
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinnbatv">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Nba Tv
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayineu1">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Euro Sport 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayineu2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Euro Sport 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex1">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 1
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex2">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 2
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex3">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 3
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex4">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 4
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex5">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 5
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex6">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 6
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 
 <a href="/yayinex7">
             <div class="sportrgool">
                 <i class="sportrgooltime"> 7/24</i> Exxen Sports 7
-
+                	<i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
             </div>
         </a>
 #akisonu
