--- a/index.html
+++ b/index.html
@@ -9,128 +9,92 @@
 #akisbaslangic
 <a href="/yayinex2">
             <div class="sportrgool">
-                <i class="sportrgooltime">18:00</i> Bodo/Glimt - Rigas Skola
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">18:00</i> Bodo/Glimt - Rigas Skola</div>
         </a>
 		
 <a href="/yayinex3">
             <div class="sportrgool">
-                <i class="sportrgooltime">19:00</i> Lincoln Red - Karabağ
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">19:00</i> Lincoln Red - Karabağ</div>
         </a>
 		
 <a href="/yayinex4">
             <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Apoel - Petrocub
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">20:00</i> Apoel - Petrocub</div>
         </a>
 		
 <a href="/yayinex5">
             <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Malmö - Klaksvik
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">20:00</i> Malmö - Klaksvik</div>
         </a>
 		
 <a href="/yayinex6">
             <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Sturm Graz - Porto
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">20:00</i> Sturm Graz - Porto</div>
         </a>
 		
 <a href="/yayinex7">
             <div class="sportrgool">
-                <i class="sportrgooltime">20:30</i> Steaua Bükreş - M. Tel Aviv
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">20:30</i> Steaua Bükreş - M. Tel Aviv</div>
         </a>
 		
 <a href="/yayint4">
             <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> Dinamo Kiev - Partizan
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">21:00</i> Dinamo Kiev - Partizan</div>
         </a>
 		
 <a href="/yayineu2">
             <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> Ferencvaros - TNS
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">21:00</i> Ferencvaros - TNS</div>
         </a>
 		
 <a href="/yayinex2">
             <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> UE St. Coloma - Midtjylland
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">21:00</i> UE St. Coloma - Midtjylland</div>
         </a>
 		
 <a href="/yayinsmarts">
             <div class="sportrgool">
-                <i class="sportrgooltime">21:30</i> Lugano - Fenerbahçe
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">21:30</i> Lugano - Fenerbahçe</div>
         </a>
 		
 <a href="/yayinex3">
             <div class="sportrgool">
-                <i class="sportrgooltime">22:00</i> Shamrock R. - Sparta Prag
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">22:00</i> Shamrock R. - Sparta Prag</div>
         </a>
 		
 <a href="/yayinex4">
             <div class="sportrgool">
-                <i class="sportrgooltime">22:30</i> Sporting Lisbon - Sevilla
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">22:30</i> Sporting Lisbon - Sevilla</div>
         </a>
 		
 <a href="/yayinex5">
             <div class="sportrgool">
-                <i class="sportrgooltime">00:45</i> Gimnasia - San Lorenzo
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">00:45</i> Gimnasia - San Lorenzo</div>
         </a>
 		
 <a href="/yayinex6">
             <div class="sportrgool">
-                <i class="sportrgooltime">00:45</i> Newells OB - Ind. Mendoza
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">00:45</i> Newells OB - Ind. Mendoza</div>
         </a>
 		
 <a href="/yayinex7">
             <div class="sportrgool">
-                <i class="sportrgooltime">01:00</i> R. Montevideo - Huachipato
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">01:00</i> R. Montevideo - Huachipato</div>
         </a>
 		
 <a href="/yayint4">
             <div class="sportrgool">
-                <i class="sportrgooltime">02:30</i> Manchester City - Celtic
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">02:30</i> Manchester City - Celtic</div>
         </a>
 		
 <a href="/yayineu2">
             <div class="sportrgool">
-                <i class="sportrgooltime">03:00</i> Independiente - Barracas C.
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">03:00</i> Independiente - Barracas C.</div>
         </a>
 		
 <a href="/yayinex2">
             <div class="sportrgool">
-                <i class="sportrgooltime">03:30</i> Internacional - Rosario C.
-                <i class="sportrgoollig" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; color: white; ">Canlı</i>
-            </div>
+                <i class="sportrgooltime">03:30</i> Internacional - Rosario C.</div>
         </a>
 			
 <a href="/yayinstar">
