--- a/index.html
+++ b/index.html
@@ -7,255 +7,21 @@
 
 
 #akisbaslangic
-<a href="/yayinex2">
-            <div class="sportrgool">
-                <i class="sportrgooltime">18:00</i> Bodo/Glimt - Rigas Skola</div>
-        </a>
-		
-<a href="/yayinex3">
-            <div class="sportrgool">
-                <i class="sportrgooltime">19:00</i> Lincoln Red - Karabağ</div>
-        </a>
-		
-<a href="/yayinex4">
-            <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Apoel - Petrocub</div>
-        </a>
-		
-<a href="/yayinex5">
-            <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Malmö - Klaksvik</div>
-        </a>
-		
-<a href="/yayinex6">
-            <div class="sportrgool">
-                <i class="sportrgooltime">20:00</i> Sturm Graz - Porto</div>
-        </a>
-		
-<a href="/yayinex7">
-            <div class="sportrgool">
-                <i class="sportrgooltime">20:30</i> Steaua Bükreş - M. Tel Aviv</div>
-        </a>
-		
-<a href="/yayint4">
-            <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> Dinamo Kiev - Partizan</div>
-        </a>
-		
-<a href="/yayineu2">
-            <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> Ferencvaros - TNS</div>
-        </a>
-		
-<a href="/yayinex2">
-            <div class="sportrgool">
-                <i class="sportrgooltime">21:00</i> UE St. Coloma - Midtjylland</div>
-        </a>
-		
-<a href="/yayinsmarts">
-            <div class="sportrgool">
-                <i class="sportrgooltime">21:30</i> Lugano - Fenerbahçe</div>
-        </a>
-		
-<a href="/yayinex3">
-            <div class="sportrgool">
-                <i class="sportrgooltime">22:00</i> Shamrock R. - Sparta Prag</div>
-        </a>
-		
-<a href="/yayinex4">
-            <div class="sportrgool">
-                <i class="sportrgooltime">22:30</i> Sporting Lisbon - Sevilla</div>
-        </a>
-		
-<a href="/yayinex5">
-            <div class="sportrgool">
-                <i class="sportrgooltime">00:45</i> Gimnasia - San Lorenzo</div>
-        </a>
-		
-<a href="/yayinex6">
-            <div class="sportrgool">
-                <i class="sportrgooltime">00:45</i> Newells OB - Ind. Mendoza</div>
-        </a>
-		
-<a href="/yayinex7">
-            <div class="sportrgool">
-                <i class="sportrgooltime">01:00</i> R. Montevideo - Huachipato</div>
-        </a>
-		
-<a href="/yayint4">
-            <div class="sportrgool">
-                <i class="sportrgooltime">02:30</i> Manchester City - Celtic</div>
-        </a>
-		
-<a href="/yayineu2">
-            <div class="sportrgool">
-                <i class="sportrgooltime">03:00</i> Independiente - Barracas C.</div>
-        </a>
-		
-<a href="/yayinex2">
-            <div class="sportrgool">
-                <i class="sportrgooltime">03:30</i> Internacional - Rosario C.</div>
-        </a>
-			
 <a href="/yayinstar">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports 1</div>
-        </a>
-
+    <div class="sportrgool">
+        <i class="sportrgooltime">18.00</i> Fenerbahce - Galatasaray
+    </div>
+</a>
 <a href="/yayinb2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports 2</div>
-        </a>
-
-<a href="/yayinb3">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports 3</div>
-        </a>
-
-<a href="/yayinb4">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports 4</div>
-        </a>
-
-<a href="/yayinb5">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports 5</div>
-        </a>
-
-<a href="/yayinbm1">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports Max 1</div>
-        </a>
-
-<a href="/yayinbm2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> beIN Sports Max 2</div>
-        </a>
-
-<a href="/yayinss">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> S Sport</div>
-        </a>
-
-<a href="/yayinss2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> S Sport 2</div>
-        </a>
-
-<a href="/yayint1">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tivibu Spor 1</div>
-        </a>
-
-<a href="/yayint2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tivibu Spor 2</div>
-        </a>
-
-<a href="/yayint3">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tivibu Spor 3</div>
-        </a>
-
+    <div class="sportrgool">
+        <i class="sportrgooltime">13:00</i> Trabzon Geldi - Besiktaş Emlakjet
+    </div>
+</a>
 <a href="/yayint4">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tivibu Spor 4</div>
-        </a>
-
-<a href="/yayinsmarts">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Smart Spor</div>
-        </a>
-
-<a href="/yayinsms2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Smart Spor 2</div>
-        </a>
-
-<a href="/yayintrtspor">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Trt Spor</div>
-        </a>
-
-<a href="/yayintrtspor2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Trt Spor 2</div>
-        </a>
-
-<a href="/yayintrt1">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Trt 1</div>
-        </a>
-
-<a href="/yayinas">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> A Spor</div>
-        </a>
-
-<a href="/yayinatv">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Atv</div>
-        </a>
-
-<a href="/yayintv8">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tv 8</div>
-        </a>
-
-<a href="/yayintv85">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Tv8.5</div>
-        </a>
-
-<a href="/yayinnbatv">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Nba Tv</div>
-        </a>
-
-<a href="/yayineu1">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Euro Sport 1</div>
-        </a>
-
-<a href="/yayineu2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Euro Sport 2</div>
-        </a>
-
-<a href="/yayinex1">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 1</div>
-        </a>
-
-<a href="/yayinex2">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 2</div>
-        </a>
-
-<a href="/yayinex3">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 3</div>
-        </a>
-
-<a href="/yayinex4">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 4</div>
-        </a>
-
-<a href="/yayinex5">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 5</div>
-        </a>
-
-<a href="/yayinex6">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 6</div>
-        </a>
-
-<a href="/yayinex7">
-            <div class="sportrgool">
-                <i class="sportrgooltime"> 7/24</i> Exxen Sports 7</div>
-        </a>
+    <div class="sportrgool">
+        <i class="sportrgooltime">02:00</i> Hatay - Gaziantep demirspor
+    </div>
+</a>
 #akisonu
 
 
