--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
 </a>
 <a href="/yayinex6">
     <div class="sportrgool">
+        <i class="sportrgooltime">05:00</i> UFC - 304
+    </div>
+</a>
+<a href="/yayinex7">
+    <div class="sportrgool">
         <i class="sportrgooltime">05:00</i> CD Guadalajara - San Jose E.
     </div>
 </a>
