--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
 
 
 #akisbaslangic
-<a href="/yayinex6">
-    <div class="sportrgool">
-        <i class="sportrgooltime">01:00</i> Juventude - Fluminense
-    </div>
-</a>
 <a href="/yayinex7">
     <div class="sportrgool">
         <i class="sportrgooltime">03:00</i> Cincinnati - Queretaro
@@ -30,6 +25,21 @@
 <a href="/yayinex2">
     <div class="sportrgool">
         <i class="sportrgooltime">05:30</i> Portland Tim - Colorado Rapids
+    </div>
+</a>
+<a href="/yayinex3">
+    <div class="sportrgool">
+        <i class="sportrgooltime">12:00</i> Japonya - Brezilya (Basket)
+    </div>
+</a>
+<a href="/yayinex4">
+    <div class="sportrgool">
+        <i class="sportrgooltime">14:30</i> Avustralya - Yunanistan (Basket)
+    </div>
+</a>
+<a href="/yayinex5">
+    <div class="sportrgool">
+        <i class="sportrgooltime">15:30</i> M'gladbach - Ipswich Town
     </div>
 </a>
 
