--- a/index.html
+++ b/index.html
@@ -82,11 +82,6 @@
         <i class="sportrgooltime">21:30</i> Schalke 04 - Braunschweig
     </div>
 </a>
-<a href="/yayinex7">
-    <div class="sportrgool">
-        <i class="sportrgooltime">21:45</i> Frosinone - Lazio
-    </div>
-</a>
 <a href="/yayinex6">
     <div class="sportrgool">
         <i class="sportrgooltime">22:00</i> Getafe - Atletico Madrid
@@ -110,6 +105,11 @@
 <a href="/yayintrtspor2">
     <div class="sportrgool">
         <i class="sportrgooltime">22:00</i> Buse Naz Çakıroğlu - Boks
+    </div>
+</a>
+<a href="/yayinex7">
+    <div class="sportrgool">
+        <i class="sportrgooltime">22:00</i> UFC - Fight Night
     </div>
 </a>
 <a href="/yayinex4">
